# DolphinBrowse

DolphinBrowse/: README.md  package-lock.json  package.json  pyproject.toml  replit_ssh_key.pub
DolphinBrowse/.local/state/replit/agent/design_reference/8f6eeeec-1b56-4c19-9435-9df4345caec2/: 6ae4b850-41f3-48d1-886f-476ceeffe527.html  97a80adc-2d7e-473d-9bf3-adf7f34a344b.html  b6916b4e-11e0-4693-a3ef-29c19d60cbce.html  becfaa52-5da8-4fa2-b8d9-6a5040a4e252.html
DolphinBrowse/.local/state/replit/agent/filesystem/: filesystem_state.json
DolphinBrowse/attached_assets/: Pasted-You-said-0-Repository-structure-pgsql-Copy-Edit-AgentBrowse-server-package-json-t-1755071188576_1755071188577.txt  Pasted-server-src-routes-users-ts-ts-Copy-Edit-import-Router-from-express-import-PrismaClient-fr-1755071152421_1755071152422.txt
DolphinBrowse/client/src/: App.tsx
DolphinBrowse/client/src/components/: FileDropzone.tsx  FileUpload.tsx  activity-log.tsx  task-control.tsx
DolphinBrowse/client/src/components/ui/: badge.tsx
DolphinBrowse/client/src/hooks/: use-websocket.ts
DolphinBrowse/client/src/pages/: automation-dashboard.tsx  dashboard.tsx  login.tsx
DolphinBrowse/python-backend/: agent_browser_controller.py  browser_automation.py  file_processor.py  main.py  requirements.txt  websocket_manager.py
DolphinBrowse/server/: routes.files.ts  routes.ts  storage.ts  types.d.ts
DolphinBrowse/server/services/: python-agent-service.ts  time.ts  trial.ts  websocket-manager.ts
DolphinBrowse/shared/: schema.ts
lovable-ai-workspace-main/: .replit  README.md  package.json  (+2 more)
(+21 files in other folders)
