[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.9.1",
    "fastapi==0.104.1",
    "firebase-admin>=7.1.0",
    "pillow==10.1.0",
    "playwright==1.40.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
    "websockets==12.0",
    "browser-use==0.1.0",
    "openpyxl==3.1.2",
]